# aws-cognito-circleci

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  clean_generated.sh  pyproject.toml
.circleci/: config.yml
app/: main.py
src/: client_login_pages.py  cognito_app.py  cognito_default.py  cognito_google.py  google_idp.py  hosted_domain.py
tests/: test_cognito_app.py  test_streamlit_app.py
